- Fixed bug #46238 (Segmentation fault on static call with empty string method)